refactor: add filtering search to "find all" route in event controller
